--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "semantic-release": "^19.0.5",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
