feat: contact form added

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "type": "git"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^18.7.23",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
