--- a/.eslintrc
+++ b/.eslintrc
@@ -31,33 +31,38 @@
     "prettier/prettier": [
       "warn",
       {
-        "printWidth": 100,
         "trailingComma": "all",
         "tabWidth": 2,
         "semi": true,
-        "singleQuote": true,
+        "singleQuote": false,
         "bracketSpacing": true,
         "arrowParens": "always",
-        "endOfLine":"auto"
+        "endOfLine": "auto"
       }
     ],
-    "@typescript-eslint/no-unused-vars": [
+    "import/order": [
       "warn",
       {
-        "args": "after-used",
-        "ignoreRestSiblings": false,
-        "argsIgnorePattern": "^_.*?$"
+        "groups": [
+          "type",
+          "builtin",
+          "object",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "~/**",
+            "group": "external",
+            "position": "after"
+          }
+        ],
+        "newlines-between": "always"
       }
     ],
-    "import/order": ["warn", {
-      "groups": ["type", "builtin", "object", "external", "internal", "parent", "sibling", "index"],
-      "pathGroups": [{
-        "pattern": "~/**",
-        "group": "external",
-        "position": "after"
-      }],
-      "newlines-between": "always"
-    }],
     "react/self-closing-comp": "warn",
     "react/jsx-sort-props": [
       "warn",
@@ -70,9 +75,13 @@
     ],
     "padding-line-between-statements": [
       "warn",
-      {"blankLine": "always", "prev": "*", "next": "return"},
-      {"blankLine": "always", "prev": ["const", "let", "var"], "next": "*"},
-      {"blankLine": "any", "prev": ["const", "let", "var"], "next": ["const", "let", "var"]}
+      { "blankLine": "always", "prev": "*", "next": "return" },
+      { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+      {
+        "blankLine": "any",
+        "prev": ["const", "let", "var"],
+        "next": ["const", "let", "var"]
+      }
     ]
   }
 }
